fix wrapping cross-browser
In Chrome, the wbr's set for the node names are sufficient to force 
break points for wrapping. Even when white-space is set to nowrap.

However, other browser will not break with the wbr's as long as 
white-space is set to nowrap.

--- a/editor/css/nodeSelector.css
+++ b/editor/css/nodeSelector.css
@@ -196,7 +196,7 @@
   overflow-x: hidden;
   text-overflow: ellipsis;
   position: relative;
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
 
 #nodeSelector>ul>li>h1 {
